    o #341263 by cdale: Prevent exposed filter forms from processing during batch operations.
    o #342322 by drewish: Correct label for translation status.
    o #343223 by alienbrain: Ensure path before join.
    o #343284 by andypost: Fix odd/even reversed in table style compared to Drupal core.
    o #345545 by mfb: Correct occasional Drupal.settings related javascript error.
    o #345546: Fix Node: Created day argument off by 1 error.
    o #345707 by aries: Do not display breadcrumb link if no link text.
    o #355939 by yhager: Fix missing comment GUID in comment RSS style.
    o #321332 with help from brahms: views_handler_field_markup only worked if format was named "format".
    o #348322 by Darren Oh: Fix missing /code in api plugins help.
    o #353090 by eaton: RSS feeds were not using all of the Drupal hooks to ensure full compatibility with core feeds.
    o #293832 by drewish: Allow menu items to have administrative description.
    o #345528: Mini-pager generated invalid HTML with empty li tags.
    o #351745: Exposed taxonomy term autocomplete filter failed if term existed in multiple vocabularies.
    o #353002: tracker view had wrong argument and was not picking up comments by the selected user.
    o Case sensitivity on string filter checkmark was backward.
    o #355919: views_theme() needed to include plugin theme files to detect functions.
    o #353515: Many characters could get incorrectly translated in exposed filters combined with ajax tablesorting.

  Other changes:
    o #288801 by drewish and eaton: Aggregator item support! Make views of feeds!
    o #335647 by markus_petrux: Add memory and a reset button to the Views list page.
    o #343047 by alienbrain: Allow all handlers to participate in view validation.
    o #339223 by greggles: Allow taxonomy term tid to be sortable.
    o #324378 by eigentor: CSS improvements to the view list page.
    o #354736 by Shai: Clarification on exposed filter text.